2003-09-21 Damien Sandras  <dsandras@seconix.com>

	* src/pref_window.cpp: Added an info button that displays
	information about the selected codec in the prefs.
	
2003-09-21 Damien Sandras  <dsandras@seconix.com>

	* src/common.h: Changed number of audio codecs.
	
	* src/config.cpp, src/endpoint.cpp, src/pref_window.cpp: Added support
	for iLBC audio codec from iLBCfreeware.org.
	
2003-09-21 Damien Sandras  <dsandras@seconix.com>

	* src/videograbber.cpp: Always delete the grabber when the opening
	fails, even when plugins are used.
	
2003-09-21 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Use http://seconix.com/ip to detect the 
	gateway IP for use with IP translation.

	* configure.in: Reverted previous change until plugins are again
	in latest OpenH323 CVS.
	
2003-09-18 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Changed includes order so that they work with the
	latest OpenH323/PWLib CVS where the recursion problem has been fixed.
	
2003-09-17 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Moved ip_translation and public_ip keys
	from "general" to "nat". Added a key permitting to disable automatic
	IP checking.
	
	* src/common.h: Added NAT_KEY.
	
	* src/config.cpp: Moved ip_translation and public_ip keys
	from "general" to "nat". Added upgrade routine (0.98 -> 0.99) to move
	the values from general to nat and disable old keys.
	
	* src/endpoint.cpp, src/endpoint.h: Added notifier that updates
	the IP address regularly if "ip_checking" is enabled. Uses
	dyndns.org for that purpose.
	
	* src/pref_window.cpp: Moved ip_translation and public_ip keys
	from "general" to "nat".
	
2003-09-17 Damien Sandras  <dsandras@seconix.com>

	* lib/xdap/xdap.c, src/main_window.cpp: Backported xml fix from
	0.98.5.
	
2003-09-11 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Only display the "recording" popup when
	both channels are opened without error.
	