@@ -1,3 +1,8 @@
+2003-09-22 Damien Sandras  <dsandras@seconix.com>
+
+	* src/pref_window.cpp: Fixed alignment of buttons. Added Properties
+	buttons to set codec-specific and advanced options if required.
+	
 2003-09-21 Damien Sandras  <dsandras@seconix.com>
 
 	* src/pref_window.cpp: Added an info button that displays
